--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@automerge/automerge-repo-react-hooks": "^1.2.0",
     "@docusaurus/core": "3.2.1",
     "@docusaurus/preset-classic": "3.2.1",
     "@docusaurus/theme-live-codeblock": "3.2.1",
@@ -30,6 +31,7 @@
     "clsx": "^1.1.1",
     "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "^1.2.1",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-katex": "5",
