--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@docusaurus/types": "^3.2.1",
     "docusaurus-plugin-typedoc": "^0.22.0",
     "prettier": "^3.2.5",
     "typedoc": "^0.25.13",
