--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@automerge/automerge": "^2.2.9",
+    "@automerge/automerge-repo": "^2.0.0",
+    "@automerge/vanillajs": "^2.0.0",
     "@docusaurus/core": "3.2.1",
     "@docusaurus/preset-classic": "3.2.1",
     "@docusaurus/theme-mermaid": "3.2.1",
