--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/mocha": "^10.0.1",
     "@types/uuid": "^9.0.2",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-llms": "^0.1.5",
     "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^18.2.0",
