--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version-file: "22"
+          node-version: "22"
           cache: "pnpm"
       - run: "git submodule init && git submodule update"
       - run: pnpm install --frozen-lockfile
